tests/snapshots/integration__integration_tests__help__help_step_copy_ignored.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - step
    - copy-ignored
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_ALLOW_PROTOCOL: file
    GIT_CONFIG_COUNT: "2"
    GIT_CONFIG_GLOBAL: /nonexistent/wt/gitconfig
    GIT_CONFIG_KEY_0: user.useConfigOnly
    GIT_CONFIG_KEY_1: rerere.enabled
    GIT_CONFIG_SYSTEM: /nonexistent/wt/gitconfig
    GIT_CONFIG_VALUE_0: "true"
    GIT_CONFIG_VALUE_1: "false"
    LANG: C
    LC_ALL: C
    LLVM_PROFILE_FILE: "[LLVM_PROFILE_FILE]"
    TERM: alacritty
    WORKTRUNK_APPROVALS_PATH: "[TEST_APPROVALS]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_SYSTEM_CONFIG_PATH: "[TEST_SYSTEM_CONFIG]"
    WORKTRUNK_TEST_BASH_INSTALLED: "0"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_CODEX_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_FISH_INSTALLED: "0"
    WORKTRUNK_TEST_GEMINI_INSTALLED: "0"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_OPENCODE_INSTALLED: "0"
    WORKTRUNK_TEST_PARENT_SHELL: ""
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_POWERSHELL_INSTALLED: "0"
    WORKTRUNK_TEST_PROBE_TIMEOUT_MS: "60000"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WORKTRUNK_TEST_ZSH_INSTALLED: "0"
---
success: true
exit_code: 0
----- stdout -----
wt step copy-ignored - Copy gitignored files to another worktree[0m

Eliminates cold starts by copying build caches and dependencies.[0m

Usage: [1m[36mwt step copy-ignored[0m [36m[OPTIONS][0m

[1m[32mOptions:[0m
      [1m[36m--from[0m[36m [0m[36m<FROM>[0m
          Source worktree branch[0m
          
          Defaults to primary worktree.[0m

      [1m[36m--to[0m[36m [0m[36m<TO>[0m
          Destination worktree branch[0m
          
          Defaults to current worktree.[0m

      [1m[36m--dry-run[0m
          Show what would be copied

      [1m[36m--force[0m
          Overwrite existing files in destination

      [1m[36m--require-include[0m
          Require .worktreeinclude to copy anything

  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mAutomation:[0m
      [1m[36m--format[0m[36m [0m[36m<FORMAT>[0m
          Output format[0m
          
          JSON prints structured result to stdout after the copy completes.[0m
          
          [default: text]
          [possible values: text, json]

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

      [1m[36m--config-set[0m[36m [0m[36m<toml>[0m
          Override config with inline TOML, e.g. --config-set list.full=true (repeatable)

  [1m[36m-v[0m, [1m[36m--verbose[0m[36m...[0m
          Verbose output (-v: info logs + hook/alias template variables on stderr; -vv: also debug logs and raw subprocess output written to .git/wt/logs/). Set WORKTRUNK_VERBOSE=0|1|2 to apply the same level everywhere — including shell completion, which no flag can reach

  [1m[36m-y[0m, [1m[36m--yes[0m
          Skip approval prompts

[1m[32mSetup[0m

Add to the project config:

[107m [0m [2m# .config/wt.toml[0m
[107m [0m [2m[36m[post-start][0m
[107m [0m [2mcopy = [0m[2m[32m"wt step copy-ignored"[0m

[1m[32mChoosing source and destination[0m

By default the copy runs from the primary worktree into the current one — what a [2mpost-start[0m hook needs, since the new worktree is where the hook runs. [2m--from[0m and [2m--to[0m name either end by branch, so a copy can run between two worktrees from anywhere:

[107m [0m [2m[0m[2m[34mwt[0m[2m step copy-ignored [0m[2m[36m--from[0m[2m main [0m[2m[36m--to[0m[2m feature   # between two named worktrees[0m
[107m [0m [2m[0m[2m[34mwt[0m[2m step copy-ignored [0m[2m[36m--from[0m[2m feature             # from feature into the current worktree[0m

A branch named by [2m--from[0m or [2m--to[0m must have a worktree.

[1m[32mWhat gets copied[0m

All gitignored files are copied by default, except for built-in excluded directories: VCS metadata ([2m.bzr/[0m, [2m.hg/[0m, [2m.jj/[0m, [2m.pijul/[0m, [2m.sl/[0m, [2m.svn/[0m), tool-state ([2m.conductor/[0m, [2m.entire/[0m, [2m.worktrees/[0m), and nested worktrees. Tracked files are never touched. Discovery handles nested [2m.gitignore[0m files, global excludes, and [2m.git/info/exclude[0m. Existing files in the destination are skipped, so re-running is safe; [2m--force[0m overwrites them.

To limit what gets copied further, create [2m.worktreeinclude[0m with gitignore-style patterns. Files must be [1mboth[0m gitignored [1mand[0m in [2m.worktreeinclude[0m:

[107m [0m [2m# .worktreeinclude[0m
[107m [0m [2m.env[0m
[107m [0m [2mnode_modules/[0m
[107m [0m [2mtarget/[0m

After [2m.worktreeinclude[0m selects entries, you can add more gitignore-style excludes in user config, per-project user overrides, or project config:

[107m [0m [2m# ~/.config/worktrunk/config.toml[0m
[107m [0m [2m[36m[step.copy-ignored][0m
[107m [0m [2mexclude = [[0m[2m[32m".cache/"[0m[2m, [0m[2m[32m".turbo/"[0m[2m][0m

To copy nothing unless [2m.worktreeinclude[0m exists — matching Claude Code desktop, where the file is required — pass [2m--require-include[0m:

[107m [0m [2m[0m[2m[34mwt[0m[2m step copy-ignored [0m[2m[36m--require-include[0m

Without [2m.worktreeinclude[0m, the command is a no-op (it reports that nothing was copied and why). With the file present, only matching files copy as above. To apply this across every repository, put the flag in a user-config hook: [2mpost-start = "wt step copy-ignored --require-include"[0m.

[1m[32mCommon patterns[0m

       Type                           Patterns                    
 ───────────────── ────────────────────────────────────────────── 
 Dependencies      [2mnode_modules/[0m, [2m.venv/[0m, [2mtarget/[0m, [2mvendor/[0m, [2mPods/[0m 
 Build caches      [2m.cache/[0m, [2m.next/[0m, [2m.parcel-cache/[0m, [2m.turbo/[0m       
 Generated assets  Images, ML models, binaries too large for git  
 Environment files [2m.env[0m (if not generated per-worktree)           

[1m[32mCopy-on-write[0m

Files are reflinked where the filesystem supports it: APFS (macOS), btrfs and XFS (Linux), ReFS (Windows). A reflinked copy shares the source's disk blocks until one side writes. For a 14GB [2mtarget/[0m directory:

            Command            Time Disk 
 ───────────────────────────── ──── ──── 
 [2mcp -R[0m (full copy)             2m   14GB 
 [2mcp -Rc[0m / [2mwt step copy-ignored[0m 20s  ~0   

On ext4 and NTFS, which have no reflink, every file is copied in full; the summary says [2m(reflinked, no extra disk)[0m or [2m(full copy)[0m.

Reflinks are per file (like [2mcp -Rc[0m), so copy time scales with file count.

Use the [2mpost-start[0m hook so the copy runs in the background. Use [2mpre-start[0m instead if subsequent hooks or [2m--execute[0m command need the copied files immediately.

[1m[32mLanguage-specific notes[0m

[32mRust[0m

The [2mtarget/[0m directory is huge (often 1-10GB). Copying with reflink cuts first build from ~68s to ~3s by reusing compiled dependencies.

[32mNode.js[0m

[2mnode_modules/[0m is large but mostly static. If the project has no native dependencies, symlinks are even faster:

[107m [0m [2m# .config/wt.toml[0m
[107m [0m [2m[36m[pre-start][0m
[107m [0m [2mdeps = [0m[2m[32m"ln -sf {{ primary_worktree_path }}/node_modules ."[0m

[32mPython[0m

Virtual environments contain absolute paths and can't be copied. Use [2muv sync[0m instead — it's fast enough that copying isn't worth it.

[1m[32mBehavior vs Claude Code on desktop[0m

The [2m.worktreeinclude[0m pattern is shared with Claude Code on desktop, which copies matching files when creating worktrees. Differences:

- worktrunk copies all gitignored files by default; Claude Code requires [2m.worktreeinclude[0m. Pass [2m--require-include[0m to match Claude Code (copy nothing without [2m.worktreeinclude[0m)
- worktrunk runs as a configurable hook in the worktree lifecycle

----- stderr -----
